welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: not found: value write
    write()
    ^Array1:23: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
   setCouleurBrosse()=T(i)
   ^