welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	save()
}

def save(){
  var T = new Array[Color](getMondeLargeur())
	for(i<- 0 to T.length-1){
  	avance()
  	T(i)=getCouleurSol()
	}
  for (j <- 0 to getMondeLargeur()){
    save()
    gauche()
    avance()
    gauche()
    avance()
    write()
  }
   
  for(i <- 0 to T.length-1){
   marque()
   setCouleurBrosse()=T(i)
  }
}



def marque(){
  baisseBrosse()
  leveBrosse()
}